aws-security-groups.tf
/**
 * Default AWS Security Groups (Firewall) Configurations
 */

resource "aws_security_group" "instances" {
  name = "${local.cannonical_name}-instances"
  vpc_id = "${data.aws_vpc.default.id}"

  ingress {
    from_port   = 0
    to_port     = 0
    #protocol    = "6"
    protocol = "-1"
    cidr_blocks = ["${data.aws_vpc.default.cidr_block}"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol    = "6"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "dmz" {
  name = "${local.cannonical_name}-dmz"
  vpc_id = "${data.aws_vpc.default.id}"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "6"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "6"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
